# MMDViewer

./: .gitignore  CMakeLists.txt  Camera.cpp  InitShader.cpp  MMDViewer.cpp  MeshPainter.cpp  README.md  Stage.cpp  TriMesh.cpp  VMDAnimation.cpp  embed_shaders.py  glad.c  imgui.ini  inspect_vmd.py  main.cpp
doc/: MMD中的VMD文件格式详解-CSDN博客.html  PMX文件格式解析.html  VMD file format _ MikuMikuDance Wiki _ Fandom.html
include/: Camera.h  EmbeddedShaders.h  Light.h  MeshPainter.h  Stage.h  TriMesh.h  VMDAnimation.h  glad.h
models/つかさ式まちたん_つかさ_td81277/: Readme - 副本.txt  Readme.txt
motions/: maodie.vmd
shaders/: fshader.glsl  fshader_debug_uv.glsl  fshader_edge.glsl  fshader_shadow.glsl  fshader_stage.glsl  fshader_with_light.glsl  vshader.glsl  vshader_color.glsl  vshader_edge.glsl  vshader_shadow.glsl  vshader_shadow_static.glsl  vshader_stage.glsl
stages/test/: ENG_README.txt  主体NO16.pmx  使用规约（日语）.txt  舞动方块大.pmx  舞动方块小.pmx  ！使用前请阅读并同意遵守以下规约！.txt
stages/催眠术场景by柑橘纸/: Readme.txt  stage COLOR.pmx
stages/校园祭舞台/: 作者：Malt_sauce.txt  校园祭舞台.pmx
